--- a/dokumentace/dokumentace.tex
+++ b/dokumentace/dokumentace.tex
@@ -779,7 +779,7 @@ How to Create AR Draw/Doodling in Unity3D} [online]. [cit. 2023-12-17]. Dostupn√
 
 
 \end{thebibliography}
-
+\newpage
 %% obr√°zky 
 \listoffigures
 
